objects/Apttus_DocuApi__DocuSignSigningGroupMembers__c.object
<CustomObject>
    <description>Stores the DocuSign signing group members information.</description>
    <fields>
        <fullName>Apttus_DocuApi__Email__c</fullName>
        <description>This field stores the email address of the group members</description>
        <inlineHelpText>This field stores the email address of the group members</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__SigningGroupId__c</fullName>
        <description>This field associates the signing group members to the DocuSign signing groups</description>
        <inlineHelpText>This field associates the signing group members to the DocuSign signing groups</inlineHelpText>
        <label>Signing Group Id</label>
        <referenceTo>Apttus_DocuApi__DocuSignSigningGroup__c</referenceTo>
        <relationshipLabel>DocuSign Signing Group Members</relationshipLabel>
        <relationshipName>DocuSignSigningGroupMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__UserName__c</fullName>
        <description>This field stores the name of the signing group members</description>
        <inlineHelpText>This field stores the name of the signing group members</inlineHelpText>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Signing Group Member</label>
    <nameField>
        <displayFormat>DSSG-{0000000}</displayFormat>
        <label>Record Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Signing Group Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>